Fix date picker on firefox

--- a/scss/_builddatetime.scss
+++ b/scss/_builddatetime.scss
@@ -1,2 +1,2 @@
-$builddatetime: "160620121220";
+$builddatetime: "160707095505";
 
